<?xml version="1.0"?>
<package format="2">
  <name>fetch_moveit_melodic</name>
  <version>0.0.0</version>
  <description>The fetch_moveit_melodic package</description>

  <maintainer email="708yamaguchi@gmail.com">Naoya Yamaguchi</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>fetcheus</exec_depend>
  <exec_depend>fetch_gazebo</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>pr2eus_moveit</exec_depend>

</package>
